# apart-core

./: .gitignore  .travis.yml  Cargo.toml  readme.md  release  rustfmt.toml
src/: async.rs  asynchronous.rs  child.rs  clone.rs  compression.rs  inbound.rs  lsblk.rs  main.rs  outbound.rs  partclone.rs  restore.rs  server.rs
tests/: client.rs  clone.rs  restore.rs
tests/coreutil/: mod.rs
tests/mockpcl/: mockimg-2017-04-20T1500.apt.ext2.lz4  mockimg-2017-04-20T1500.apt.ext2.uncompressed  mockimg-2017-04-20T1500.apt.ext2.zstd  mocklsblk  mockpcl.dd  mockpcl.f2fs
