[package]
name = "apart-core"
version = "0.3.8"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"

[dependencies]
zmq = "0.9"
yaml-rust = "0.4"
log = "0.4"
env_logger = "0.6"
regex = "1"
chrono = "0.4"
json = "0.11"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
wait-timeout = "0.2"
flate2 = "1"
