[package]
name = "apart-core"
version = "0.3.9"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"

[dependencies]
zmq = "0.9"
yaml-rust = "0.4"
log = "0.4"
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
regex = { version = "1.3", default-features = false, features = ["std", "unicode"] }
chrono = "0.4"
json = "0.12"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
wait-timeout = "0.2"
flate2 = "1"

[profile.release]
lto = "thin"
opt-level = "s"
