[package]
name = "apart-core"
version = "0.3.16"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2024"

[dependencies]
chrono = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["color", "auto-color", "humantime"] }
json = "0.12"
log = "0.4"
regex = { version = "1.3", default-features = false, features = ["std", "unicode"] }
uuid = { version = "1", features = ["v4"] }
yaml-rust = "0.4"
zmq = "0.10"

[dev-dependencies]
flate2 = "1"
wait-timeout = "0.2"

[profile.release]
lto = "thin"
opt-level = "s"
